Closed
Bug 136016
Opened 23 years ago
Closed 21 years ago
'Set as wallpaper' should be disabled for broken image - M140RC1 M140BR [@ nsWindowsHooks::SetImageAsWallpaper]
Categories
(SeaMonkey :: UI Design, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: aha, Assigned: ajschult784)
References
Details
(Keywords: crash, topcrash, Whiteboard: TB20950599Z, TB20951631Z)
Crash Data
Attachments
(1 file)
1004 bytes,
patch
|
timeless
:
review+
darin.moz
:
superreview+
|
Details | Diff | Splinter Review |
In image context menu item 'Set as wallpaper' should be disabled for broken image.
Comment 1•23 years ago
|
||
Almost a dupe of bug 131429. But that could be fixed without this getting
fixed, so leaving separate.
Updated•23 years ago
|
Target Milestone: --- → Future
Comment 4•23 years ago
|
||
Mozilla rc2 on WinXP crashes when trying to set broken image on the webpage as
Windows wallpaper.
Updated•23 years ago
|
Keywords: mozilla1.1
Comment 5•22 years ago
|
||
still crashes Mozilla/5.0 (Windows; U; Windows NT 5.1; fr-FR; ; MultiZilla
v1.4.0.4A) Gecko/20030610
Updated•22 years ago
|
Reporter | ||
Comment 7•22 years ago
|
||
And of course this is also crashing M1.4RC1+ -> TB20951631Z
Whiteboard: TB20950599Z → TB20950599Z, TB20951631Z
Reporter | ||
Comment 8•22 years ago
|
||
Jay: Belong topcrash signature "nsWindowsHooks::SetImageAsWallpaper" to this bug?
Comment 9•22 years ago
|
||
Adam: Yes...that is the correct stack signature.
Here is Adam's most recent incident:
Incident ID 20951631
Stack Signature nsWindowsHooks::SetImageAsWallpaper 8df036f7
Email Address aha@pinknet.cz
Product ID Gecko1.4
Build ID 2003061105
Trigger Time 2003-06-11 13:26:13
Platform Win32
Operating System Windows NT 5.0 build 2195
Module appcomps.dll
URL visited
User Comments B#136016
Trigger Reason Access violation
Source File Name
d:/builds/seamonkey/mozilla/xpfe/components/winhooks/nsWindowsHooks.cpp
Trigger Line No. 961
Stack Trace
nsWindowsHooks::SetImageAsWallpaper
[d:/builds/seamonkey/mozilla/xpfe/components/winhooks/nsWindowsHooks.cpp, line 961]
XPTC_InvokeByIndex
[d:/builds/seamonkey/mozilla/xpcom/reflect/xptcall/src/md/win32/xptcinvoke.cpp,
line 102]
XPCWrappedNative::CallMethod
[d:/builds/seamonkey/mozilla/js/src/xpconnect/src/xpcwrappednative.cpp, line 2025]
XPC_WN_CallMethod
[d:/builds/seamonkey/mozilla/js/src/xpconnect/src/xpcwrappednativejsops.cpp,
line 1285]
js_Invoke [d:/builds/seamonkey/mozilla/js/src/jsinterp.c, line 845]
js_Interpret [d:/builds/seamonkey/mozilla/js/src/jsinterp.c, line 2854]
js_Invoke [d:/builds/seamonkey/mozilla/js/src/jsinterp.c, line 861]
js_InternalInvoke [d:/builds/seamonkey/mozilla/js/src/jsinterp.c, line 936]
JS_CallFunctionValue [d:/builds/seamonkey/mozilla/js/src/jsapi.c, line 3529]
nsJSContext::CallEventHandler
[d:/builds/seamonkey/mozilla/dom/src/base/nsJSEnvironment.cpp, line 1114]
nsJSEventListener::HandleEvent
[d:/builds/seamonkey/mozilla/dom/src/events/nsJSEventListener.cpp, line 183]
nsEventListenerManager::HandleEventSubType
[d:/builds/seamonkey/mozilla/content/events/src/nsEventListenerManager.cpp, line
1192]
nsEventListenerManager::HandleEvent
[d:/builds/seamonkey/mozilla/content/events/src/nsEventListenerManager.cpp, line
2193]
nsXULElement::HandleDOMEvent
[d:/builds/seamonkey/mozilla/content/xul/content/src/nsXULElement.cpp, line 3302]
PresShell::HandleDOMEventWithTarget
[d:/builds/seamonkey/mozilla/layout/html/base/src/nsPresShell.cpp, line 6458]
nsMenuFrame::Execute
[d:/builds/seamonkey/mozilla/layout/xul/base/src/nsMenuFrame.cpp, line 1719]
nsMenuFrame::HandleEvent
[d:/builds/seamonkey/mozilla/layout/xul/base/src/nsMenuFrame.cpp, line 461]
PresShell::HandleEventInternal
[d:/builds/seamonkey/mozilla/layout/html/base/src/nsPresShell.cpp, line 6427]
PresShell::HandleEvent
[d:/builds/seamonkey/mozilla/layout/html/base/src/nsPresShell.cpp, line 6317]
nsViewManager::HandleEvent
[d:/builds/seamonkey/mozilla/view/src/nsViewManager.cpp, line 2314]
nsView::HandleEvent [d:/builds/seamonkey/mozilla/view/src/nsView.cpp, line 308]
nsViewManager::DispatchEvent
[d:/builds/seamonkey/mozilla/view/src/nsViewManager.cpp, line 2050]
HandleEvent [d:/builds/seamonkey/mozilla/view/src/nsView.cpp, line 82]
nsWindow::DispatchEvent
[d:/builds/seamonkey/mozilla/widget/src/windows/nsWindow.cpp, line 1058]
nsWindow::DispatchWindowEvent
[d:/builds/seamonkey/mozilla/widget/src/windows/nsWindow.cpp, line 1075]
nsWindow::DispatchMouseEvent
[d:/builds/seamonkey/mozilla/widget/src/windows/nsWindow.cpp, line 5191]
ChildWindow::DispatchMouseEvent
[d:/builds/seamonkey/mozilla/widget/src/windows/nsWindow.cpp, line 5446]
nsWindow::ProcessMessage
[d:/builds/seamonkey/mozilla/widget/src/windows/nsWindow.cpp, line 4030]
nsWindow::WindowProc
[d:/builds/seamonkey/mozilla/widget/src/windows/nsWindow.cpp, line 1338]
USER32.dll + 0x2a244 (0x77e3a244)
USER32.dll + 0x45e5 (0x77e145e5)
USER32.dll + 0xa792 (0x77e1a792)
nsAppShellService::Run
[d:/builds/seamonkey/mozilla/xpfe/appshell/src/nsAppShellService.cpp, line 479]
main1 [d:/builds/seamonkey/mozilla/xpfe/bootstrap/nsAppRunner.cpp, line 1284]
main [d:/builds/seamonkey/mozilla/xpfe/bootstrap/nsAppRunner.cpp, line 1650]
WinMain [d:/builds/seamonkey/mozilla/xpfe/bootstrap/nsAppRunner.cpp, line 1672]
WinMainCRTStartup()
KERNEL32.dll + 0x2847c (0x77ea847c)
Adding topcrash info and marking topcrash for tracking (only because it's easily
reproducible...there are not too many crashes in M140RC1 or M140 Branch Talkback
data).
Keywords: stackwanted → topcrash
Summary: 'Set as wallpaper' should be disabled for broken image → 'Set as wallpaper' should be disabled for broken image - M140RC1 M140BR [@ nsWindowsHooks::SetImageAsWallpaper]
Assignee | ||
Comment 10•21 years ago
|
||
Assignee: firefox → ajschult
Status: NEW → ASSIGNED
Attachment #147000 -
Flags: review+
Assignee | ||
Updated•21 years ago
|
Attachment #147000 -
Flags: superreview?(darin)
Comment 11•21 years ago
|
||
*** Bug 238464 has been marked as a duplicate of this bug. ***
Comment 12•21 years ago
|
||
Comment on attachment 147000 [details] [diff] [review]
patch
oops!
Attachment #147000 -
Flags: superreview?(darin) → superreview+
Assignee | ||
Comment 13•21 years ago
|
||
fixed
Status: ASSIGNED → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Updated•21 years ago
|
Product: Core → Mozilla Application Suite
Updated•14 years ago
|
Crash Signature: [@ nsWindowsHooks::SetImageAsWallpaper]
You need to log in
before you can comment on or make changes to this bug.
Description
•