Bug 136016 'Set as wallpaper' should be disabled for broken image - M140RC1 M140BR [@ nsWindowsHooks::SetImageAsWallpaper] patch by ajschult@mindspring.com r=timeless sr=darin